--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   font-family: sans-serif;
   text-align: center;
 }
+/*Navigation bar*/
 .Nav {
   padding: 10px;
   margin:10px;
@@ -19,15 +20,56 @@
   border-radius: 5px;
 }
 
+/*todos component*/
 .todos {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+/*single todo component*/
 .todo {
   border: 1px solid purple;
   border-radius: 5px;
   width: 50%;
   padding: 10px;
   margin: 5px;
+}
+
+.todo a{
+  text-decoration:none;
+  color:black;
+}
+
+/*Todo form component*/
+.todo-form{
+  display: flex;
+  justify-content: center;
+}
+.todo-form form{
+  display: flex;
+  width:50%;
+  flex-direction: column;
+  letter-spacing: 1px;
+  font-size:15px;
+}
+.todo-form form input[type="text"]{
+  font-size:15px;
+  outline:none;
+  margin:10px;
+}
+.todo-form form textarea{
+  font-size:15px;
+  height:200px;
+  outline:none;
+  margin:10px;
+}
+.todo-form form button{
+  border-radius:5px;
+  border:1px solid black;
+  outline:none;
+  font-size:15px;
+  width:50%;
+  align-self:center;
+  margin:10px;
 }
