--- a/src/App.css
+++ b/src/App.css
@@ -3,74 +3,7 @@
   text-align: center;
 }
 /*Navigation bar*/
-.Nav {
-  padding: 10px;
-  margin:10px;
-}
-.Nav a {
-  padding: 10px;
-  text-decoration: none;
-  color: black;
-  letter-spacing: 1px;
-  font-weight: lighter;
-  text-transform: uppercase;
-}
 .active-link {
-  border: 1px solid black;
-  border-radius: 5px;
-}
-
-/*todos component*/
-.todos {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border:1px solid black;
-}
-
-/*single todo component*/
-.todo {
-  border: 1px solid purple;
-  border-radius: 5px;
-  width: 50%;
-  padding: 10px;
-  margin: 5px;
-}
-
-.todo a{
-  text-decoration:none;
-  color:black;
-}
-
-/*Todo form component*/
-.todo-form{
-  display: flex;
-  justify-content: center;
-}
-.todo-form form{
-  display: flex;
-  width:50%;
-  flex-direction: column;
-  letter-spacing: 1px;
-  font-size:15px;
-}
-.todo-form form input[type="text"]{
-  font-size:15px;
-  outline:none;
-  margin:10px;
-}
-.todo-form form textarea{
-  font-size:15px;
-  height:200px;
-  outline:none;
-  margin:10px;
-}
-.todo-form form button{
-  border-radius:5px;
-  border:1px solid black;
-  outline:none;
-  font-size:15px;
-  width:50%;
-  align-self:center;
-  margin:10px;
+  transition: .2s;
+  background: #394779; 
 }
